--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -129,4 +129,5 @@
         </div>
     </div>
     <footer>
-        &copy; {{ now|date:"Y" }} Meu Blog Django. Todos os direitos reservados.
+        &copy; {{ now|date:"Y" }} Meu Blog Django. Todos os direitos reservados.]
+        
